# easychair-extra

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
easychair_extra/: generate.py  programcommittee.py  read.py  reviewassignment.py  submission.py
easychair_sample_files/: author.csv  bidding.csv  committee.csv  committee_topic.csv  submission.csv  submission_topic.csv
examples/: accepted_listing.py  anonymise_submissions.py  form_emergency_reviewers_pool.py  group_submission_by_similarity.py  minimum_review_quota.py  papers_with_same_authors.py  papers_with_short_abstracts.py  plot_num_pc_per_area.py
test/: test_programcommittee.py  test_read.py  test_reviewassignment.py  test_submission.py
