[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "easychair_extra"
version = "0.1.22"
description = "Extra functionalities to handle files exported from EasyChair"
authors = [
  { name = "Simon Rey", email = "reysimon@orange.fr" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "mip",
    "pandas",
    "faker",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "unittest2",
]

[project.urls]
"Homepage" = "https://github.com/COMSOC-Community/easychair-extra"
"Bug Tracker" = "https://github.com/COMSOC-Community/easychair-extra/issues"
